src/index.css
@import "tailwindcss";

@theme {
  --color-bg: var(--bg);
  --color-bg-soft: var(--bg-soft);

  --color-surface: var(--surface);
  --color-surface-hover: var(--surface-hover);
  --color-surface-border: var(--surface-border);
  --color-surface-strong: var(--surface-strong);

  --color-brand-primary: var(--brand-primary);
  --color-brand-accent: var(--brand-accent);
  --color-brand-gray: var(--brand-gray);
  --color-brand-ink: var(--brand-ink);
  --color-brand-paper: var(--brand-paper);

  --color-neutral-light: var(--neutral-light);
  --color-neutral-muted: var(--neutral-muted);

  --color-text-primary: var(--text-primary);
  --color-text-secondary: var(--text-secondary);

  /* --font-heading: "Montserrat", system-ui, sans-serif; */
  /* --font-body: "EB Garamond", ui-serif, Georgia, serif; */
  --font-heading: "Libre Baskerville", Georgia, serif;
  --font-body: "Source Sans 3", system-ui, sans-serif;

  --shadow-soft: 0 4px 12px rgba(0, 0, 0, 0.04);
  --shadow-card: 0 8px 20px rgba(0, 0, 0, 0.08);

}

/* Light theme por defecto */
:root {
  /* --bg: #f7fbfb;
  --bg-soft: #eef4f4; */
  
  --bg: #f0f0f0;
  --bg-soft: #edf1ef;


  --surface: #ffffff;
  --surface-hover: #f3f7f7;
  --surface-border: rgba(11, 31, 30, 0.08);
  --surface-strong: rgba(11, 31, 30, 0.12);

  /* --brand-primary: #007473;
  --brand-accent: #00ABC7; */
  --brand-primary: #0f7c77;
  --brand-accent: #2a9d98;



  --brand-gray: #808080;
  --brand-ink: #0b1f1e;
  --brand-paper: #f7fbfb;

  --neutral-light: #E6F2F2;
  --neutral-muted: #6f8085;

  /* --text-primary: #0b1f1e;
  --text-secondary: #5f7276; */
  --text-primary: #1f2a2a;
  --text-secondary: #5f6b6b;

  /* --shadow-soft: 0 4px 12px rgba(0, 0, 0, 0.06);
  --shadow-card: 0 8px 20px rgba(0, 0, 0, 0.08); */
  --shadow-soft: 0 1px 2px rgba(22, 32, 32, 0.05);
  --shadow-card: 0 6px 14px rgba(22, 32, 32, 0.08);
}

.font-heading {
  font-family: var(--font-heading);
  letter-spacing: -0.01em;
}

.font-body {
  font-family: var(--font-body);
}

/* Dark theme */
.dark {
  --bg: #070A10;
  --bg-soft: #0B0F19;

  --surface: rgba(255, 255, 255, 0.05);
  --surface-hover: rgba(255, 255, 255, 0.08);
  --surface-border: rgba(255, 255, 255, 0.10);
  --surface-strong: rgba(255, 255, 255, 0.12);

  --brand-primary: #007473;
  --brand-accent: #00ABC7;
  --brand-gray: #808080;
  --brand-ink: #0b1f1e;
  --brand-paper: #f7fbfb;

  --neutral-light: #E6F2F2;
  --neutral-muted: #A0B3B3;

  --text-primary: #EAF4F4;
  --text-secondary: #A0B3B3;

  --shadow-soft: 0 8px 24px rgba(0, 0, 0, 0.35);
  --shadow-card: 0 12px 32px rgba(0, 0, 0, 0.45);
}

html,
body,
#root {
  min-height: 100%;
}

html {
  background-color: var(--bg);
}

body {
  background-color: var(--bg);
  color: var(--text-primary);
  font-family: var(--font-body);
}

